Fixed navbar search icon on firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -698,7 +698,6 @@ h1, h2, h3, h4, h5, h6,
   width: 30px;
   height: 35px;
   padding: 0;
-  margin: 0 -35px;
 }
 
 @media (min-width: $grid-float-breakpoint) {
